$Id: History,v 1.46 1999-06-29 20:27:45 gcosmo Exp $
$Name: not supported by cvs2svn $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------

History file for Geant4 configuration scripts.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

29th June 1999  Gabriele Cosmo (config-01-00-07)
- architecture.gmk: fixed bug in SUN-CC setup concerning XMLIBS and XMFLAGS.
  -lXm was missing.

25th June 1999  Gabriele Cosmo
- Use $G4LIB/$G4SYSTEM instead of $G4LIBDIR in binmake.gmk for invoking
  liblist and search for libname.map (granular libraries setup).

24th June 1999  John Allison
- Use liblist and libname.map in $G4LIBDIR.

19th June 1999  John Allison
- Removed references to G4Ray in G4VIS_BUILD.gmk and G4VIS_USE.gmk.

9th June 1999  Gunter Folger
- Adapt liblist.c for Windows, all changes contained withing #ifdef WIN32 blocks. 

4th June 1999  John Allison
- Corrected USER_DEFINED_LDLIBS action.
- Changed `export G4TMP=$(G4TMP);' to `G4TMP=$(G4TMP); export G4TMP;'
- Added -I$(G4BASE)/geometry/solids/Boolean/include.
- Introduced LDLIBS_PREFINAL (Gunter).

2nd June 1999  John Allison
- Changed more occurrences of := to = to fix crash of liblist at startup.

1st June 1999  John Allison
- Changed LDLIBS2 := to LDLIBS2 = in binmake.gmk.
- Reverted $(G4WORKDIR)/tmp/$(G4SYSTEM)/$(G4TARGET) to $(G4TMPDIR).
- Added /$(G4TARGET) to liblist -d $(G4WORKDIR)/tmp/$(G4SYSTEM) in binmake.gmk.

31st May 1999  John Allison